# Trivela

./: .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_ISSUE_612.md  IMPLEMENTATION_ISSUE_624.md  IMPLEMENTATION_SUMMARY.md  ISSUES_316_318_319_320_IMPLEMENTATION.md  ISSUES_317_321_322_323_IMPLEMENTATION.md  Makefile  README.md  compose.yaml  package-lock.json  package.json  pr_description.md
backend/: .env.example  README.md  eslint.config.js  openapi.yaml  package.json  trivela.db
cli/: package.json
contracts/: FUZZING.md
contracts/badges/: Cargo.toml
contracts/badges/src/: lib.rs  test.rs
contracts/campaign/: Cargo.toml
contracts/campaign/proptest-regressions/: fuzz_test.txt
contracts/campaign/src/: lib.rs  test.rs
contracts/campaign/test_snapshots/fuzz_test/: fuzz_admin_rotation_integrity.2.json  fuzz_random_operation_sequence.1.json  fuzz_time_window_enforcement.1.json
contracts/campaign/test_snapshots/test/: test_admin_deregister.1.json  test_capacity_reached.1.json  test_deregister_liveness_checks.1.json  test_deregister_success_and_re_register.1.json  test_is_participant_for_unknown_address.1.json  test_multisig_2_of_3_one_signature_fails.1.json  test_multisig_2_of_3_two_signatures_succeed_and_nonce_replay_fails.1.json  test_open_registration_when_no_root.1.json  test_participant_count_increments_on_new_register_only.1.json  test_prune_expired_participants_removes_expired_entries.1.json  test_prune_expired_participants_respects_max_entries_cap.1.json  test_register_at_window_boundaries.1.json  test_register_participant_twice_returns_false.1.json  test_register_rejected_with_leaf_not_in_tree.1.json  test_register_unauthorized_other_address_does_not_persist.1.json  test_register_with_invalid_code_fails.1.json  test_register_with_valid_code_succeeds_then_second_use_fails.1.json  test_register_with_valid_merkle_proof.1.json  test_register_without_code_in_invite_only_mode_fails.1.json  test_revoke_invite_removes_it.1.json  test_set_window_allows_equal_start_and_end.1.json  test_storage_stats_tracks_participants_and_expired_estimate.1.json  test_time_window_validation.1.json
contracts/integration/: Cargo.toml
contracts/integration/src/: lib.rs
contracts/integration/tests/: scenarios.rs
docs/: DEPLOYMENT.md  ERROR_CODES.md  FORMAL_VERIFICATION.md  REFERRAL_REWARDS.md  RUNBOOK.md
frontend/: nginx.conf  package.json  playwright.visual.config.ts  vite.config.js  vitest.config.js
k8s/: cronjob-db-backup.yaml
load-tests/: README.md
monitoring/: prometheus.yml
scripts/: backup-db.sh  build-bindings.js  check-bundle-size.mjs  deploy-blue-green.sh  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_campaigns.py  test_exceptions.py  test_pagination.py
sdk/python/trivela/: __init__.py  _http.py  _pagination.py  client.py  exceptions.py  models.py
(+216 files in other folders)
