[workspace]
resolver = "2"
members = [
  "contracts/rewards",
  "contracts/campaign",
  "contracts/badges",
  "contracts/integration",
  "contracts/nullifiers",
  "contracts/voting",
]

[workspace.metadata]
description = "Trivela - Stellar Soroban Campaign & Rewards Platform"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
