[package]
name = "trivela-badges-contract"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"
description = "Trivela NFT achievement badges — soulbound and transferable on-chain badges"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "25.1"

[dev-dependencies]
soroban-sdk = { version = "25.1", features = ["testutils"] }
proptest = "1.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
