[package]
name = "trivela-campaign-contract"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75.0"
description = "Trivela campaign configuration and eligibility on Soroban"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "26.0"

[dev-dependencies]
soroban-sdk = { version = "26.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
